# node-monitor-agent

./: .gitignore  Cargo.toml  README.md  TEST_SCRIPTS.md  example.md  test_http.sh  test_multiple.sh
.github/workflows/: release.yml
shell/: README.md  download.sh  test_http_only.sh  test_mixed.sh  test_multiple.sh  test_ws_only.sh
src/: config.rs  lib.rs  main.rs  monitor.rs
src/metrics/: http.rs  influx.rs  mod.rs  traits.rs
