[package]
name = "monitor-agent"
version = "1.0.10"
edition = "2024"

[dependencies]
alloy = { version = "1.0.22", features = ["full"] }
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive","env"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
hostname = "0.4.1"
influxdb = { version = "0.7.2", features = ["derive"] }
log = { version = "0.4.27", features = ["std"] }
tokio = { version = "1.46.1", features = ["full"]}
reqwest = { version = "0.12", features = ["json"] }
serde_json = { version = "1.0", optional = true }
serde = "1.0"
